# pulumi-ec

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.yml  .upgrade-config.yml  CHANGELOG.md  Makefile  README.md  mise.toml
.claude/: CLAUDE.md
.config/: mise.test.toml  mise.toml
.github/: copilot-instructions.md
.github/workflows/: build_provider.yml  build_sdk.yml  command-dispatch.yml  license.yml  lint.yml  main-post-build.yml  master.yml  prerelease.yml  prerequisites.yml  publish.yml  pull-request.yml  release.yml  resync-build.yml  run-acceptance-tests.yml  test.yml  upgrade-bridge.yml  verify-release.yml
docs/: _index.md
examples/: examples_dotnet_test.go  examples_go_test.go  examples_nodejs_test.go  examples_py_test.go  go.mod  go.sum
provider/: go.mod  go.sum  resources.go  resources_test.go
scripts/: plugins.mk
sdk/: go.mod  go.sum
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_ec/: README.md  __init__.py  _inputs.py  deployment.py  deployment_elasticsearch_keystore.py  deployment_extension.py  deployment_traffic_filter.py  deployment_traffic_filter_association.py  elasticsearch_project.py  get_aws_privatelink_endpoint.py  get_azure_privatelink_endpoint.py  get_deployment.py  get_deployment_templates.py  get_deployments.py  get_gcp_private_service_connect_endpoint.py  get_stack.py  get_traffic_filter.py  observability_project.py  organization.py  outputs.py  provider.py  security_project.py  serverless_traffic_filter.py  snapshot_repository.py
sdk/python/pulumi_ec/config/: __init__.pyi  vars.py
(+627 files in other folders)
